@@ -1,17 +1,0 @@
-post_install() {
-cat << EOF
->>> To make TiMidity++ use the Freepats patches,
->>> copy /etc/timidity++/timidity-freepats.cfg
->>>   to /etc/timidity++/timidity.cfg
-EOF
-}
-
-post_upgrade() {
-  post_install $1
-}
-
-op=$1
-shift
-[ "$(type -t "$op")" = "function" ] && $op "$@"
-
-# vim:set ts=2 sw=2 et:
