@@ -1,16 +1,17 @@
 # $Id$
-# Maintainer: Corrado Primier <bardo@aur.archlinux.org>
+# Maintainer: Ray Rashif <schivmeister@gmail.com>
+# Contributor: Corrado Primier <bardo@aur.archlinux.org>
 # Contributor: rabyte <rabyte.at.pen.dot.tj>
 
 pkgname=timidity-freepats
 pkgver=20060219
 pkgrel=5
 pkgdesc="A free and open set of instrument patches for use with softsynths"
-arch=('i686' 'x86_64')
+arch=(any)
 url="http://freepats.opensrc.org/"
 license=('GPL')
 depends=('timidity++')
-install=${pkgname}.install
+install=$pkgname.install
 source=(http://freepats.opensrc.org/freepats-${pkgver}.tar.bz2
         timidity-freepats.cfg)
 md5sums=('b947806304bc559a644a2c06deda8404' 'f9b5efafc6339a173d95e06cf7870d64')
@@ -25,7 +26,7 @@ build() {
       ${startdir}/pkg/usr/share/timidity/freepats/Tone_000/
   install -m644 ${startdir}/src/freepats/Tone_000/*.txt \
       ${startdir}/pkg/usr/share/timidity/freepats/Tone_000/
-  
+
   install -Dm644 ${startdir}/src/freepats/crude.cfg \
       ${startdir}/pkg/etc/timidity++/freepats/freepats.cfg
   install -m644 ${startdir}/src/timidity-freepats.cfg ${startdir}/pkg/etc/timidity++/
