@@ -1,2 +1,0 @@
-2007-10-24 Corrado Primier <bardo@aur.archlinux.org>
-* Adopted and added to [community]
