@@ -1,2 +1,5 @@
+2010-05-31 Ray Rashif <schivmeister@gmail.com>
+* Rebuild to update package filename with architecture
+
 2007-10-24 Corrado Primier <bardo@aur.archlinux.org>
 * Adopted and added to [community]
